[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Photo/configIcon.png" type="Texture" id=2]
[ext_resource path="res://Assets/button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/another_america/Another America.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 4 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.43195
margin_right = -1.43195
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = -5.0
margin_top = -6.0
margin_right = 994.0
margin_bottom = 610.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 227.0
margin_top = 85.5723
margin_right = 539.0
margin_bottom = 186.572
custom_fonts/font = SubResource( 1 )
text = "N A S K I"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 220.0
margin_right = 446.0
margin_bottom = 250.0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0941176, 0.909804, 0.129412, 1 )
text = "btn_play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 280.0
margin_right = 446.0
margin_bottom = 310.0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0862745, 0.862745, 0.0588235, 1 )
text = "btn_credit"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CreditsButton"]
visible = false
modulate = Color( 1, 0.74902, 0, 0.431373 )
show_behind_parent = true
position = Vector2( 73.8976, 13.773 )
texture = ExtResource( 3 )
region_rect = Rect2( 146, 30, 146, 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="HowtoPlayButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 340.0
margin_right = 446.0
margin_bottom = 370.0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.866667, 0.0392157, 1 )
text = "btn_how"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 400.0
margin_right = 446.0
margin_bottom = 430.0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color_pressed = Color( 0.258824, 0.956863, 0.0352941, 1 )
text = "btn_exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigButton" type="TextureButton" parent="."]
margin_left = 725.474
margin_top = 5.44958
margin_right = 981.474
margin_bottom = 261.45
rect_scale = Vector2( 0.25, 0.25 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="." method="_on_CreditsButton_mouse_exited"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="HowtoPlayButton" to="." method="_on_HowtoPlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ConfigButton" to="." method="_on_ConfigButton_pressed"]
